[project]
name = "pdfest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "edge-tts>=7.2.3",
    "pillow>=12.0.0",
    "pygame>=2.6.1",
    "pymupdf>=1.26.6",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]
